gitops/platform-apps/pgadmin4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin4
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
