gitops/platform-apps/pgadmin4/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4
  namespace: pgadmin4
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin4.__ZONE_NAME__`)
      services:
        - kind: Service
          name: pgadmin4
          port: 80
  tls: {}
